<resources>
    <string name="app_name">Fooddy</string>
    <string name="vegesafe">Vegesafe</string>
    <string name="easy_choose">Easy to choose</string>
    <string name="slogan">"Shopping tại nhà cùng Vegesafe"</string>
    <string name="login">Đăng nhập</string>
    <string name="has_account">Chưa có tài khoản?</string>
    <string name="sign_in">Đăng ký</string>
    <string name="sign_in_now">" Đăng ký ngay!"</string>
    <string name="tt_regis">Đăng ký đơn giản với thông tin sau</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="re_enter_pass">Nhập lại mật khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="agree">Đồng ý với điều khoản và chính sách của chúng tôi</string>
    <string name="dieu_khoan">Điều khoản đăng ký</string>
    <string name="enter_otp">Nhập mã xác minh</string>
    <string name="re_send">Gửi lại</string>
    <string name="error_otp">Mẫ xác minh không đúng</string>
    <string name="check">Vui lòng kiểm tra lại mã xác minh !</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="err_acc">Tên đăng nhập hoặc mật khẩu không đúng</string>
    <string name="forgot">Quên mật khẩu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi">Hi, Anndee</string>
    <string name="question">Bạn đang muốn tìm gì?</string>
    <string name="location">Hà nội</string>
    <string name="enter_search">Nhập tìm kiếm</string>
    <string name="hoa_qua">Hoa quả</string>
    <string name="rau_cu">Rau củ</string>
    <string name="do_kho">Đồ khô</string>
    <string name="pho_bien">Phổ biến</string>
    <string name="all">Tất cả</string>
    <string name="cam_sanh">Cam sành</string>
    <string name="ha_giang">Hà giang</string>
    <string name="dau_tay">Dâu tây</string>
    <string name="da_lat">Đà lạt</string>
    <string name="details_noti">Chi tiết thông báo</string>
    <string name="content">8:00 AM, 23/07/2020 \n \n Mã đơn hàng: 111A023 \n \n Tên hàng: Hoa quả \n \nThời gian giao: 24/10/2020- 25/10/2020 \n\n Đơn hàng của bạn đã được xác thực thành công. Quý khách vui lòng phản hồi về chất lượng sản phẩm sau khi nhận hàng. \n \n \n Nếu có bất kì thắc mắc nào, quý khách có thể liên hệ trực tiếp hotline để được hỗ trợ kịp thời. \n\n \n Hotline: 19008198</string>
    <string name="dat_hang_thanh_cong">Đặt đơn hàng thành công!</string>
    <string name="for_you">Dành cho bạn</string>
    <string name="cafehat">Cà phê hạt</string>
    <string name="hai_duong">Hải dương</string>
    <string name="vai_thieu">Vải thiều</string>
    <string name="love">Yêu thích</string>
    <string name="noti">Thông báo</string>
    <string name="thanhcong">Đặt đơn hàng thành công</string>
    <string name="acc">Tài khoản</string>
    <string name="xac_thuc">Xác thực tài khoản</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="change_pass">Thay đổi mật khẩu</string>
    <string name="cart">Giỏ hàng</string>
    <string name="mua_hang">Mua hàng</string>
    <string name="chang_info">Thay đổi thông tin</string>
    <string name="hint_phone">Nhập số điện thoại</string>
    <string name="adress">Địa chỉ</string>
    <string name="email">Email</string>
    <string name="hint_email">Nhập Email</string>
    <string name="hint_adress">Nhập địa chỉ</string>
    <string name="sex">Giới tính</string>
    <string name="hint_sex">Nhập giới tính của bạn</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="enter_pass">Nhập mật khẩu cũ</string>
    <string name="re_enter_new_pass">Nhập lại mật khẩu mới</string>
    <string name="enter_new_pass">Nhập mật khẩu mới</string>
    <string name="err_pass">Mật khẩu không chính xác</string>
    <string name="err_pass_cr">Mật khẩu không trùng khớp</string>
    <string name="thanh_toan">Thanh toán</string>
    <string name="add">Địa chỉ giao hàng</string>
    <string name="ct_add">"Anh Duc - 0339848888 \n 99 Lĩnh Nam, Hoàng Mai, Hà Nội  "</string>
    <string name="edit">Sửa</string>
    <string name="sum">Tổng tiền</string>
    <string name="pri">275.000 d</string>
    <string name="van_chuyen">Vận chuyển</string>
    <string name="hoa_toc">Giao hàng hoả tốc</string>
    <string name="grap">Giao hàng grap</string>
    <string name="tt_khi_nhan">Thanh toán khi nhận</string>
    <string name="t4">Thanh toán trực tuyến</string>
    <string name="vcb">Vietcombank</string>
    <string name="tcb">Techcombank</string>
    <string name="bidv">BIDV</string>
    <string name="dat_hang">Đặt hàng</string>
    <string name="xac_minh">Xác minh tài khoản</string>
    <string name="mat_trc">Ảnh mặt trước CMND/CCCD</string>
    <string name="mat_sau">Ảnh mặt sau CMND/CCCD</string>
    <string name="ct_xm">*Quý khách vui lòng cung cấp các thông tin  dưới đây để xác minh tài khoản giúp thuận tiện cho quá trình thuê xe. Mọi thông tin  của khách hàng đều được bảo mật.</string>
    <string name="yeu_thich">Yêu thích</string>
    <string name="ct_dt">Cam sành Hà Giang từ lâu đã nổi tiếng trên thị trường về chất lượng sản phẩm. Đây là một loại hoa quả giàu vitamin C, và đem lại nhiều lợi ích khác.</string>
    <string name="w">Khối lượng</string>
    <string name="gh">Giao hàng</string>
    <string name="add_to_cart">Thêm vào giỏ</string>
    <string name="tiep_tuc">Tiếp tục</string>
</resources>